--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>p5.js bolierplate project</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#212121" />
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -13,7 +14,8 @@
     </head>
     <body>
         <p>HTML goes here!</p>
-        <script src="js/vendor/jquery-3.1.0.min.js"></script>
+        
+        <script src="js/vendor/jquery-3.1.1.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
         <!--<script language="javascript" src="js/vendor/p5.dom.js"></script>-->
         <!--<script language="javascript" src="js/vendor/p5.sound.js"></script>-->
