--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>p5.js bolierplate project</title>
+        <title>your boilerplate project</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#212121" />
 
-        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 
     </head>
     <body>
-        <p>HTML goes here!</p>
-        
+        <p>put your HTML here</p>
+
         <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
         <!--<script language="javascript" src="js/vendor/p5.dom.js"></script>-->
         <!--<script language="javascript" src="js/vendor/p5.sound.js"></script>-->
