--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#212121" />
-
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-
     </head>
     <body>
         <p>put your HTML here</p>
-
-        <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
-        <!--<script language="javascript" src="js/vendor/p5.dom.js"></script>-->
-        <!--<script language="javascript" src="js/vendor/p5.sound.js"></script>-->
-
+        <script language="javascript" type="text/javascript" src="js/vendor/p5.min.js"></script>
+        <!--<script language="javascript" src="js/vendor/p5.dom.min.js"></script>-->
+        <!--<script language="javascript" src="js/vendor/p5.sound.min.js"></script>-->
         <script src="js/main.js"></script>
     </body>
 </html>
