--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <p>put your HTML here</p>
 
-        <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
+        <script language="javascript" type="text/javascript" src="js/vendor/p5.min.js"></script>
         <!--<script language="javascript" src="js/vendor/p5.sound.js"></script>-->
 
         <script src="js/main.js"></script>
